k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp
  labels:
    app: todoapp
    environment: prod
